# swagger/swagger.json
@@ -219,9 +219,9 @@
                 }
             }
         },
-        "/v1/user/login/google/mobile": {
+        "/v1/user/login/google/web": {
             "post": {
-                "description": "google login",
+                "description": "google login web",
                 "consumes": [
                     "application/json"
                 ],
@@ -231,15 +231,15 @@
                 "tags": [
                     "User"
                 ],
-                "summary": "google login",
+                "summary": "google login web",
                 "parameters": [
                     {
-                        "description": "Google login request",
+                        "description": "Google login web request",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.GoogleMobileLogin"
+                            "$ref": "#/definitions/request.GoogleWebLogin"
                         }
                     }
                 ],
@@ -420,19 +420,21 @@
                 "code": {
                     "type": "integer"
                 },
-                "message": {}
+                "message": {
+                    "type": "string"
+                }
             }
         },
-        "request.GoogleMobileLogin": {
+        "request.GoogleWebLogin": {
             "type": "object",
             "properties": {
+                "access_token": {
+                    "type": "string"
+                },
                 "app_id": {
                     "type": "string"
                 },
                 "device_id": {
-                    "type": "string"
-                },
-                "id_token": {
                     "type": "string"
                 }
             }
